corrections on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
 *{
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 
 html,
 body{
-    /* overflow-x: hidden; */
-    margin: 0 auto;
+    padding: 0;
+    margin: 0;
     line-height: 1.2;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-family: poppins-regular;
+}
+
+@font-face {
+    font-family: poppins-regular;
+    src: url(../font/Poppins/Poppins-Regular.ttf);
 }
 
 
@@ -353,7 +357,7 @@ address{
 
     .news-link{
         display: block;
-        width: 50%;
+        width: 80%;
         margin: auto;
         text-align: center;
     }
